[tool.poetry]
name = "sqlakeyset"
version = "2.0"
authors = [ "Robert Lechte <robertlechte@gmail.com>", "Anthony Carapetis <anthony.carapetis@gmail.com>" ]
license = "Unlicense"
readme = "README.rst"
description = "offset-free paging for sqlalchemy"

repository = "https://github.com/djrobstep/sqlakeyset"
homepage = "https://github.com/djrobstep/sqlakeyset"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
sqlalchemy = ">=1.3.11"
python-dateutil = "*"
packaging = ">=20.0"
typing_extensions = ">=4,<5"

[tool.poetry.dev-dependencies]
sqlbag = { git = "https://github.com/acarapetis/sqlbag.git", rev = "0a97a185070228b43cb86181e5df8051f46ebc86" }
pytest = "*"
pytest-cov = "*"
pytest-clarity = ">=1.0.0"
pytest-asyncio = "*"
psycopg2-binary = "*"
pymysql = "*"
flake8 = "*"
isort = "*"
pytz = "*"
black = { version = ">=19.10b0", python=">=3.6" }
sqlalchemy_utils = ">=0.37.0"
arrow = "*"
toml = ">=0.10.0,<0.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
aiosqlite = "^0.18.0"
asyncpg = "^0.27.0"
aiomysql = "^0.1.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.pytest.ini_options]
filterwarnings = "ignore:.*cache_ok.*:::"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
